# lingo-db

./: .gitmodules  CMakeLists.txt
include/lingodb/execution/: Execution.h
include/lingodb/runtime/: Buffer.h  ConcurrentMap.h  ExecutionContext.h  StringRuntime.h
include/lingodb/scheduler/: Scheduler.h
include/mlir/Conversion/CraneliftConversions/: CraneliftConversions.h
include/mlir/Dialect/: CMakeLists.txt
include/mlir/Dialect/RelAlg/IR/: CMakeLists.txt
include/mlir/Dialect/cranelift/: CMakeLists.txt  CraneliftDialect.h  CraneliftEnums.h  CraneliftExecutionEngine.h  CraneliftOps.h  CraneliftOps.td
lib/Conversion/CraneliftConversions/: LowerToCranelift.cpp
lib/cranelift/: CMakeLists.txt  CraneliftOps.cpp  Translator.cpp
lib/cranelift/rust-cranelift/: Cargo.toml
lib/cranelift/rust-cranelift/src/: lib.rs
lib/runner/: CMakeLists.txt  runner.cpp
lib/runtime/: StringRuntime.cpp
resources/sql/zillow/: initialize.sql
src/compiler/Dialect/DB/RuntimeFunctions/: RuntimeFunctions.cpp
src/compiler/frontend/SQL/: Parser.cpp
src/execution/: CBackend.cpp  Execution.cpp
src/runtime/: ArrowColumn.cpp  Buffer.cpp  PreAggregationHashtable.cpp  StringRuntime.cpp
src/scheduler/: Scheduler.cpp
src/tools/: CMakeLists.txt  run-mlir.cpp  run-sql.cpp  sqlite-tester.cpp
tools/ct/: ct.py  mlir-relalg-to-json.cpp
tools/docker/: Dockerfile
tools/mlir-tools/: CMakeLists.txt  mlir-opt.cpp  run-sql.cpp
tools/python/: CMakeLists.txt
tools/scripts/: benchmark-tpch.py
tools/sql/: CMakeLists.txt
tools/sqlite-tester/: CMakeLists.txt
