[package]
name = "ccranelift"
version = "0.1.0"
edition = "2021"

[lib]
name ="ccranelift"
crate-type =["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = { path = "wasmtime/cranelift/umbrella", version = "0.86.0" }
cranelift-module =  { path = "wasmtime/cranelift/module", version = "0.86.0" }
cranelift-jit = { path = "wasmtime/cranelift/jit", version = "0.86.0" }
cranelift-codegen={ path = "wasmtime/cranelift/codegen", version = "0.86.0" }
target-lexicon="0.12.4"
libc="0.2.126"
cranelift-object={ path = "wasmtime/cranelift/object", version = "0.86.0" }


